Implementa configuração de caminho para logs e adiciona novos endpoints para grupos de cota. Ajusta o decoder de erros da API para logar respostas completas e modifica a configuração de logging nos arquivos de propriedades. Adiciona métodos para buscar IDs de cota e grupo de cota ativos no repositório.